Get TR by ID, Get TR list, Insert TR
