# json_schema/openapi.json
@@ -153,6 +153,11 @@
                         "minLength": 1,
                         "maxLength": 1000
                     },
+                    "professorEmail": {
+                        "type": "string",
+                        "minLength": 1,
+                        "maxLength": 1000
+                    },
                     "secretaryStatus": {
                         "enum": [
                             "Pending",
