# server/service/ThesisRequestService.js
@@ -15,10 +15,10 @@ exports.getThesisRequestsForProfessor = function (professorId, filter) {
         if (filter?.cosupervisor) {
             filter.cosupervisor = filter.cosupervisor instanceof Array ? filter.cosupervisor[0] : filter.cosupervisor;
             if (filter.cosupervisor === 'false') {
-                sql = "SELECT * FROM thesisRequests, professor WHERE supervisor = ? AND professor.professorId = thesisRequest.supervisor";
+                sql = "SELECT * FROM thesisRequests, professor WHERE supervisor = ? AND professor.professorId = thesisRequest.supervisor AND thesisRequests.secretaryStatus = 'Accepted' ";
 
             } else if (filter.cosupervisor === 'true') {
-                sql = 'SELECT * FROM thesisRequests WHERE thesisProposalId IN (SELECT thesisProposalId FROM thesisProposal_internalCoSupervisor_bridge WHERE internalCoSupervisorId = ?)';
+                sql = "SELECT * FROM thesisRequests WHERE thesisProposalId IN (SELECT thesisProposalId FROM thesisProposal_internalCoSupervisor_bridge WHERE internalCoSupervisorId = ?) AND thesisRequests.secretaryStatus = 'Accepted' ";
             }
         } else {
             resolve();
@@ -66,36 +66,116 @@ exports.getThesisRequestsForSecretary = function () {
     });
 }
 
-exports.getThesisRequestById = function () {
+exports.getThesisRequestById = function (user, thesisRequestId) {
+    let params = [];
+    params.push(thesisRequestId)
+    let sql = "SELECT * FROM thesisRequests WHERE thesisRequestId = ?";
+    if (checkRole.isProfessor(user)) {
+        sql += " AND secretaryStatus = 'Accepted' ";
+    }
+    if (checkRole.isStudent(user)) {
+        sql += " AND studentId = ?";
+        params.push(user);
+    }
     return new Promise(function (resolve, reject) {
-        //to do
+        db.get(sql, params, function (err, row) {
+            if (err) {
+                reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+            } else if (row == undefined) {
+                reject(new PromiseError({ code: 404, message: "Not Found" }));
+            } else {
+                resolve({
+                    thesisRequestId: row.thesisRequestId,
+                    thesisProposalId: row.thesisProposalId,
+                    supervisor: { professorId: row.supervisor, name: '', surname: '', professor: `/professors/${row.supervisor}` },
+                    requester: { studentId: row.studentId, name: '', surname: '', student: `/students/${row.student}` },
+                    coSupervisors: [],
+                    title: row.title,
+                    description: row.description,
+                    secretaryStatus: row.secretaryStatus,
+                    professorStatus: row.professorStatus,
+                    approvalDate: row.approvalDate,
+                    self: `/thesisRequests/${thesisRequestId}`
+                });
+            }
+        })
+    }).then((thesisRequest) => {
+        return new Promise(function (resolve, reject) {
+            const sql = "SELECT name, surname FROM professors WHERE professorId = ?";
+            db.get(sql, [thesisRequest.supervisor.professorId], function (err, row) {
+                if (err) {
+                    reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+                } else if (row == undefined) {
+                    reject(new PromiseError({ code: 404, message: "Not Found" }));
+                } else {
+                    thesisRequest.supervisor.name = row.name;
+                    thesisRequest.supervisor.surname = row.surname;
+                    resolve(thesisRequest);
+                }
+            });
+        })
+    }).then((thesisRequest) => {
+        return new Promise(function (resolve, reject) {
+            const sql = "SELECT name, surname FROM students WHERE studentId = ?";
+            db.get(sql, [thesisRequest.requester.studentId], function (err, row) {
+                if (err) {
+                    reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+                } else if (row == undefined) {
+                    reject(new PromiseError({ code: 404, message: "Not Found" }));
+                } else {
+                    thesisRequest.requester.name = row.name;
+                    thesisRequest.requester.surname = row.surname;
+                    resolve(thesisRequest);
+                }
+            });
+        })
+    }).then((thesisRequest) => {
+        return new Promise(function (resolve, reject) {
+            const sql = "SELECT professorId, name, surname FROM professors, thesisRequest_internalCoSupervisor_bridge as bridge WHERE professors.professorId = bridge.interalCoSupervisorId AND bridge.thesisRequestId = ?";
+            db.all(sql, [thesisRequest.thesisRequestId], function (err, rows) {
+                if (err) {
+                    reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+                } else {
+                    let list = rows.map(row => (
+                        {
+                            cosupervisorId: row.professorId,
+                            name: row.name,
+                            surname: row.surname,
+                            coSupervisor: `/professors/${row.professorId}`
+                        }
+                    ))
+                    thesisRequest.coSupervisors = list;
+                    resolve(thesisRequest);
+                }
+            });
+        })
     });
 }
 
 exports.insertNewThesisRequest = function (studentId, thesisRequest) {
     return new Promise(function (resolve, reject) {
-        const sql = "SELECT professorId FROM professors WHERE professorId = ?";
+        const sql = "SELECT professorId, email FROM professors WHERE professorId = ?";
         db.get(sql, [thesisRequest.supervisor.professorId], function (err, row) {
             if (err) {
                 reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
             } else if (row == undefined) {
                 reject(new PromiseError({ code: 404, message: "Not Found" }));
             } else {
-                resolve(row.professorId);
+                resolve({ professorId: row.professorId, email: row.email });
             }
         })
-    }).then((professorId) => {
+    }).then((professor) => {
         return new Promise(function (resolve, reject) {
             const sql = "INSERT INTO thesisRequests(studentId, title, supervisor, description) VALUES(?,?,?,?)";
-            db.run(sql, [studentId, thesisRequest.title, professorId, thesisRequest.description], function (err) {
+            db.run(sql, [studentId, thesisRequest.title, professor.professorId, thesisRequest.description], function (err) {
                 if (err) {
                     reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
                 } else {
-                    resolve();
+                    resolve(professor);
                 }
             })
         })
-    }).then(async () => {
+    }).then(async (professor) => {
         let promises = []
         if (thesisRequest?.cosupervisors) {
             thesisRequest.cosupervisor.forEach((c) => {
@@ -113,14 +193,174 @@ exports.insertNewThesisRequest = function (studentId, thesisRequest) {
                 )
             })
         }
-        return await Promise.all(promises).then(() =>
-            ({ newThesisRequest: `/api/thesisrequests/${lastID}` })
-        );
+        await Promise.all(promises);
+        return professor;
+
+    }).then(async (professor) => {
+        try {
+            let emailPromises = [];
+            let notificationPromises = [];
+            emailPromises.push(smtp.sendMail(smtp.mailConstructor(professor.email, smtp.subjectInsertThesisRequest, `${smtp.textInsertThesisRequest} ${thesisRequest.title}`)));
+            notificationPromises.push(Notification.insertNewNotification(professor.professorId, smtp.subjectInsertThesisRequest, 7));
+
+            await Promise.all(emailPromises);
+            await Promise.all(notificationPromises);
+
+            return { newThesisRequest: `/api/thesisRequests` };
+
+        } catch (error) {
+            throw error;
+        }
     });
 }
 
-exports.updateThesisRequest = function () {
+exports.updateThesisRequestForProfessor = function (professorId, thesisRequest, thesisRequestId) {
     return new Promise(function (resolve, reject) {
-        //to do
+        const sql = "SELECT * FROM thesisRequests, thesisProposals WHERE thesisProposals.thesisProposalId = thesisRequests.thesisProposalId AND thesisProposals.professorId = ? AND thesisRequests.secretaryStatus = 'Accepted' ";
+        db.get(sql, [professorId], (err, row) => {
+            if (err) {
+                reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+            } else if (row === undefined) {
+                reject(new PromiseError({ code: 404, message: "Not Found" }));
+            } else {
+                resolve(row.professorId);
+            }
+        })
+    }).then(function () {
+        params = [];
+        params.push(thesisRequest.professorStatus);
+        let sql = "UPDATE thesisRequests SET professorStatus = ?";
+        if (thesisRequest.professorStatus == 'Accepeted') {
+            sql += ", approvalDate = ? ";
+            params.push(thesisRequest.approvalDate);
+        }
+        sql += " WHERE thesisRequestId = ? AND (professorStatus = 'Pending' OR professorStatus = 'Change')";
+        params.push(thesisRequestId);
+
+        db.run(sql, params, function (err) {
+            if (err) {
+                reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+            } else if (this.changes == 0) {
+                reject(new PromiseError({ code: 404, message: "Not Found" }));
+            } else {
+                resolve({ newThesisRequest: `/api/thesisRequests/${thesisRequestId}` });
+            }
+        })
+    }).then(function () {
+        return new Promise(function (resolve, reject) {
+            const sql = "SELECT email FROM students WHERE studentId = ?";
+            db.get(sql, [thesisRequest.requester.studentId], (err, row) => {
+                if (err) {
+                    reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+                } else if (row === undefined) {
+                    reject(new PromiseError({ code: 404, message: "Not Found" }));
+                } else {
+                    resolve(row.email);
+                }
+            })
+        })
+    }
+    ).then(async (studentEmail) => {
+        try {
+            let emailPromises = [];
+            let notificationPromises = [];
+            if (thesisRequest.professorStatus == 'Change') {
+                emailPromises.push(smtp.sendMail(smtp.mailConstructor(studentEmail, smtp.subjectThesisRequestChanges, thesisRequest.professorEmail)));
+                notificationPromises.push(Notification.insertNewNotification(thesisRequest.requester.studentId, smtp.subjectThesisRequestChanges, 6));
+            }
+            if (thesisRequest.professorStatus == 'Accepted') {
+                emailPromises.push(smtp.sendMail(smtp.mailConstructor(studentEmail, smtp.subjectThesisRequestChanges, `${smtp.textAcceptThesisRequest} ${thesisRequest.title}`)));
+                notificationPromises.push(Notification.insertNewNotification(thesisRequest.requester.studentId, smtp.subjectThesisRequestChanges, 6));
+            }
+            if (thesisRequest.professorStatus == 'Rejected') {
+                emailPromises.push(smtp.sendMail(smtp.mailConstructor(studentEmail, smtp.subjectThesisRequestChanges, `${smtp.textRejectThesisRequest} ${thesisRequest.title}`)));
+                notificationPromises.push(Notification.insertNewNotification(thesisRequest.requester.studentId, smtp.subjectThesisRequestChanges, 6));
+            }
+
+            await Promise.all(emailPromises);
+            await Promise.all(notificationPromises);
+
+            return { newThesisRequest: `/api/thesisRequests/${thesisRequestId}` };
+
+        } catch (error) {
+            throw error;
+        }
+    });
+}
+
+exports.updateThesisRequestForSecretary = function (thesisRequest, thesisRequestId) {
+    return new Promise(function (resolve, reject) {
+        const sql = "UPDATE thesisRequests SET secretaryStatus = ? WHERE thesisRequestId = ? AND secretaryStatus = 'Pending' ";
+        db.run(sql, [thesisRequest.secretaryStatus, thesisRequestId], function (err) {
+            if (err) {
+                reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+            } else if (this.changes == 0) {
+                reject(new PromiseError({ code: 404, message: "Not Found" }));
+            } else {
+                resolve({ newThesisRequest: `/api/thesisRequests/${thesisRequestId}` });
+            }
+        })
+    }).then(function () {
+        return new Promise(function (resolve, reject) {
+            const sql = "SELECT email FROM students WHERE studentId = ?";
+            db.get(sql, [thesisRequest.requester.studentId], (err, row) => {
+                if (err) {
+                    reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+                } else if (row === undefined) {
+                    reject(new PromiseError({ code: 404, message: "Not Found" }));
+                } else {
+                    resolve(row.email);
+                }
+            })
+        })
+    }
+    ).then(async (studentEmail) => {
+        try {
+            let emailPromises = [];
+            let notificationPromises = [];
+            if (thesisRequest.secretaryStatus == 'Accepted') {
+                emailPromises.push(smtp.sendMail(smtp.mailConstructor(studentEmail, smtp.subjectThesisRequestChanges, `${smtp.textAcceptThesisRequest} ${thesisRequest.title}`)));
+                notificationPromises.push(Notification.insertNewNotification(thesisRequest.requester.studentId, smtp.subjectThesisRequestChanges, 6));
+            }
+            if (thesisRequest.secretaryStatus == 'Rejected') {
+                emailPromises.push(smtp.sendMail(smtp.mailConstructor(studentEmail, smtp.subjectThesisRequestChanges, `${smtp.textRejectThesisRequest} ${thesisRequest.title}`)));
+                notificationPromises.push(Notification.insertNewNotification(thesisRequest.requester.studentId, smtp.subjectThesisRequestChanges, 6));
+            }
+
+            await Promise.all(emailPromises);
+            await Promise.all(notificationPromises);
+
+            return { newThesisRequest: `/api/thesisRequests/${thesisRequestId}` };
+
+        } catch (error) {
+            throw error;
+        }
+    });
+}
+
+exports.updateThesisRequestForStudent = async function (studentId, thesisRequest, thesisRequestId) {
+    let oldCoSupervisors = await Professor.getInternalCoSupervisorByThesisRequestId(thesisProposalId);
+    
+
+    
+    
+    
+    
+    
+    return new Promise(function (resolve, reject) {
+        const sql = "UPDATE thesisRequests SET title=?, description=?, professorStatus='Pending' WHERE thesisRequestId = ? AND studentId = ?";
+        db.run(sql, [thesisRequest.title, thesisRequest.description, thesisRequestId, studentId], function (err) {
+            if (err) {
+                reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
+            } else if (this.changes == 0) {
+                reject(new PromiseError({ code: 404, message: "Not Found" }));
+            } else {
+                resolve();
+            }
+        })
+    }).then(()=>{
+        return new Promise(function (resolve, reject){
+
+        })
     });
 }
